--- a/index.html
+++ b/index.html
@@ -1,60 +1,127 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>mensleek</title>
-<header style="text-align:center;">
-    
-    <img src="./photo-removebg-preview.png" alt="" style="width:200px;height:200px">
-    <h1>mensleek</h1>
-    <ul>
-        
-        <li>home</li>
-        <li>about us</li>
-        <li><a href="mens.html" style="color: goldenrod;">mens</a></li>
-        <li>women</li>
-        <li>contact us</li>
-         </ul>
-</header >
-<style>
+  <p style="background-image: C:\Users\hp\Downloads\pexels-elina-araja-1743227-3377405.jpg ;">
+  <title>Charan Kommukuri - Resume</title>
+  <img src="C:\Users\hp\Downloads\profile.jpeg" alt="HTML5 Icon" style="width:300px;height:300px">
+  </p>
+  <style>
     body {
-        line-height: 0.;
-        color: black;
+      line-height: 1.6;
+      color: black;
     }
-    ul{
-        float:left;
-        list-style-type:none;
-        font-size:30px;
-        background-color:black;
-    }
-    li{
-        display: inline;
-        color: goldenrod;
-        margin-right: 195px;
-        width: 20px;
-        transition: 0.5s;
-
-    }
-    li:hover{
-        transition-timing-function: ;
-        background-color: whitesmoke;
-        font-size: 40px;
-        transition: 0.5s;
-        border-radius:10px;
-    }
-    h1 {
-        color: goldenrod;
+    h1, h2 {
+      color: black;
     }
     .header {
-        text-align: center;
+      text-align: center;
+    }
+    .contact a {
+      color: black;
+    }
+    .section {
+      margin-top: 30px;
     }
     ul {
-        margin: 0;
-        padding-left: 20px;
+      margin: 0;
+      padding-left: 20px;
     }
-    </style>
+  </style>
 </head>
 <body>
-<div class="header">
-</div>
+
+  <div class="header">
+    <h1>Kommukuri Charan</h1>
+    <p class="contact">
+      <a href="tel:8074082477">8074082477</a> | 
+      <a href="mailto:charankommukuri@gmail.com">charankommukuri@gmail.com</a> |
+      <a href="https://www.linkedin.com/in/charan-kommukuri-b701a231b/">LinkedIn</a>
+    </p>
+  </div>
+
+  <div class="section">
+    <h2>Career Objective</h2>
+    <p>
+      Seeking a Product Manager position to leverage my analytical and problem-solving skills to drive product strategy, 
+      improve user experience, and contribute to the growth of a forward-thinking company.
+    </p>
+  </div>
+
+  <div class="section">
+    <h2>Education</h2>
+    <ul>
+      <li><strong>Bachelor of Technology (2022–2026)</strong><br>
+        Electronics and Communication Engineering, Prasad V. Potluri Siddhartha Institute of Technology<br>
+        CGPA: 7.2
+      </li>
+      <li><strong>Intermediate (2020–2022)</strong><br>
+        Sri Bhavishya Junior College<br>
+        Percentage: 75%
+      </li>
+      <li><strong>CBSE (2020)</strong><br>
+        St. Ann's CBSE School<br>
+        Percentage: 70%
+      </li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Projects</h2>
+    <p><strong>CSP – Community Service Project</strong><br>
+      Conducted surveys in Yanamalakudhuru to identify health, education, and employment needs. Analyzed data and collaborated with NGOs to design targeted solutions. Optimized digital platforms for resource distribution and improved engagement by 25% through streamlined outreach.
+    </p>
+  </div>
+
+  <div class="section">
+    <h2>Strengths</h2>
+    <ul>
+      <li>Problem Solving</li>
+      <li>Analytical Skills</li>
+      <li>Communication</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Skills</h2>
+    <ul>
+      <li>Product Management</li>
+      <li>Market Research</li>
+      <li>Cross-functional Team Leadership</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Tools</h2>
+    <ul>
+      <li>Arduino</li>
+      <li>Vivado</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Programming Languages</h2>
+    <ul>
+      <li>C</li>
+      <li>Python</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Certificates</h2>
+    <ul>
+      <li>NPTEL, IIT Kanpur: System Design through Verilog</li>
+      <li>NPTEL, IIT Kanpur: Soft Skills</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Languages Known</h2>
+    <ul>
+      <li>English</li>
+      <li>Telugu</li>
+    </ul>
+  </div>
 
 </body>
 </html>
+
