--- a/index.html
+++ b/index.html
@@ -1,129 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <p style="background-image: C:\Users\hp\Downloads\pexels-elina-araja-1743227-3377405.jpg ;">
-  <title>Charan Kommukuri - Resume</title>
-  <img src="C:\Users\hp\Downloads\profile.jpeg" alt="HTML5 Icon" style="width:300px;height:300px">
-  </p>
+  <meta charset="UTF-8">
+  <title>Resume - Kommukuri Charan</title>
   <style>
     body {
-      line-height: 1.6;
-      color: black;
-      border: solid black 1px;
+      font-family: Arial, sans-serif;
+      background: whitesmoke;
+      padding: 20px;
     }
-    h1, h2 {
-      color: black;
+    .resume-card {
+      background: white;
+      max-width: 800px;
       margin: auto;
+      border: 1px solid white;
+      padding: 20px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
     .header {
-      text-align: center;
-      margin: auto;
+      display: flex;
+      align-items: center;
     }
-    .contact a {
+    .profile-pic {
+      width: 120px;
+      height: 140px;
+      object-fit: cover;
+      border: 1px solid white;
+      margin-right: 20px;
+    }
+    .contact-info {
+      font-size: 14px;
+    }
+    .contact-info a {
       color: black;
+      text-decoration: none;
     }
-    .section {
-      margin-top: 30px;
+    h2 {
+      margin-top: 20px;
+      border-bottom: 1px solid grey;
+      padding-bottom: 5px;
     }
-    ul {
-      margin: 0;
-      padding-left: 20px;
+    p, li {
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
 
+<div class="resume-card">
   <div class="header">
-    <h1>Kommukuri Charan</h1>
-    <p class="contact">
-      <a href="tel:8074082477">8074082477</a> | 
-      <a href="mailto:charankommukuri@gmail.com">charankommukuri@gmail.com</a> |
-      <a href="https://www.linkedin.com/in/charan-kommukuri-b701a231b/">LinkedIn</a>
-    </p>
+    <img src="profile.jpeg" alt="Profile Picture" class="profile-pic">
+    <div>
+      <h1>KOMMUKURI CHARAN</h1>
+      <div class="contact-info">
+        <a href="tel:8074082477">8074082477</a><br>
+        <a href="mailto:charankommukuri@gmail.com">charankommukuri@gmail.com</a><br>
+        <a href="https://www.linkedin.com/in/charan-kommukuri-b701a231b" target="_blank">LinkedIn Profile</a>
+      </div>
+    </div>
   </div>
 
-  <div class="section">
-    <h2>Career Objective</h2>
-    <p>
-      Seeking a Product Manager position to leverage my analytical and problem-solving skills to drive product strategy, 
-      improve user experience, and contribute to the growth of a forward-thinking company.
-    </p>
-  </div>
+  <h4>CAREER OBJECTIVE</h4>
+  <p>To utilize my skills and knowledge to contribute to the success of the organization while continuing to grow professionally and personally.</p>
 
-  <div class="section">
-    <h2>Education</h2>
-    <ul>
-      <li><strong>Bachelor of Technology (2022–2026)</strong><br>
-        Electronics and Communication Engineering, Prasad V. Potluri Siddhartha Institute of Technology<br>
-        CGPA: 7.2
-      </li>
-      <li><strong>Intermediate (2020–2022)</strong><br>
-        Sri Bhavishya Junior College<br>
-        Percentage: 75%
-      </li>
-      <li><strong>CBSE (2020)</strong><br>
-        St. Ann's CBSE School<br>
-        Percentage: 70%
-      </li>
-    </ul>
-  </div>
+  <h4>Education</h4>
+  <ul>
+    <li><strong>Bachelor of Technology (2022–2026)</strong> – Electronics and Communication Engineering<br>Prasad V. Potluri Siddhartha Institute of Technology – <em>CGPA: 7.2</em></li>
+    <li><strong>Intermediate (2020–2022)</strong><br>Sri Bhavishya Junior College – <em>75%</em></li>
+    <li><strong>CBSE (2020)</strong><br>St. Ann's CBSE School – <em>70%</em></li>
+  </ul>
 
-  <div class="section">
-    <h2>Projects</h2>
-    <p><strong>CSP – Community Service Project</strong><br>
-      Conducted surveys in Yanamalakudhuru to identify health, education, and employment needs. Analyzed data and collaborated with NGOs to design targeted solutions. Optimized digital platforms for resource distribution and improved engagement by 25% through streamlined outreach.
-    </p>
-  </div>
+  <h4>Projects</h4>
+  <ul>
+    <li><strong>Automatic Water Dispenser System:</strong> Designed a touch-free, efficient system using IR sensors and microcontrollers for precise operation.</li>
+    <li><strong>CSP Community Service Project:</strong> Conducted surveys to identify health, education, and employment needs in Yanamalakudhuru.</li>
+  </ul>
 
-  <div class="section">
-    <h2>Strengths</h2>
-    <ul>
-      <li>Problem Solving</li>
-      <li>Analytical Skills</li>
-      <li>Communication</li>
-    </ul>
-  </div>
+  <h4>Internship</h4>
+  <p><strong>VLSI DFT Test Engineer Intern</strong> – BIST Technologies (May 2024)<br>
+  Hands-on experience in DFT techniques, ATPG, fault simulation, test pattern optimization, and debugging. Assisted in creating and optimizing test patterns to improve fault coverage in VLSI designs.</p>
 
-  <div class="section">
-    <h2>Skills</h2>
-    <ul>
-      <li>Product Management</li>
-      <li>Market Research</li>
-      <li>Cross-functional Team Leadership</li>
-    </ul>
-  </div>
+  <h4>Skills</h4>
+  <ul>
+    <li><strong>Core Subjects:</strong> Digital Logic Design, Internet of Things</li>
+    <li><strong>Tools:</strong> MATLAB, Multisim, Cadence (basic), Vivado</li>
+    <li><strong>Programming Languages:</strong> C, Python, Java (Basics)</li>
+  </ul>
 
-  <div class="section">
-    <h2>Tools</h2>
-    <ul>
-      <li>Arduino</li>
-      <li>Vivado</li>
-    </ul>
-  </div>
+  <h4>Certificates</h4>
+  <ul>
+    <li>NPTEL, IIT Kanpur: Enhancing Soft Skills and Personality | System Design through Verilog</li>
+    <li>BYTS Training – Problem Solving using Data Structures and Algorithms in Java</li>
+  </ul>
 
-  <div class="section">
-    <h2>Programming Languages</h2>
-    <ul>
-      <li>C</li>
-      <li>Python</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>Certificates</h2>
-    <ul>
-      <li>NPTEL, IIT Kanpur: System Design through Verilog</li>
-      <li>NPTEL, IIT Kanpur: Soft Skills</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>Languages Known</h2>
-    <ul>
-      <li>English</li>
-      <li>Telugu</li>
-    </ul>
-  </div>
+  <h4>Extracurricular Activities</h4    >
+  <ul>
+    <li>Active participant in sports events and a member of the school kabaddi team.</li>
+    <li>Participated in Circuitrix competition.</li>
+  </ul>
+</div>
 
 </body>
 </html>
